# yolov11-cpp-deployment

./: .gitignore  CMakeLists.txt  CMakeLists_segmentation.txt  README.md  README_SEGMENTATION.md  build_and_test.sh  check_onnx_input.py  model_info.cpp  re_export_onnx.py  test_image.cpp
resource/: README.md
scripts/: README.md  analyze_model_layers.py  compare_pt_onnx.py  export_yolo_onnx.py  requirements.txt  run_model_analysis.sh
src/: main.cpp
src/ia/: YOLO11.cpp  YOLO11.hpp  YOLOSeg.cpp  YOLOSeg.hpp
src/ia/tools/: Config.cpp  Config.hpp
